Closed Bug 1220610 Opened 9 years ago Closed 9 years ago

Fix the nsIDocument::GetDocumentURI and nsIDocument::GetOriginalURI comments to be correct and up to date

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

Details

Attachments

(1 file)

Right now the comment for nsIDocument::GetOriginalURI says it returns what the spec calls the "document's address". This is exactly wrong, since the "document's address" changes with fragment identifier navigation and pushState changes, which is exactly what GetOriginalURI does *not* do. The comment for GetDocumentURI is also out of date.
Summary: Fix the nsIDocument::GetDocumentURI and nsIDocument::GetOriginalURI comments to be correct and up to dae → Fix the nsIDocument::GetDocumentURI and nsIDocument::GetOriginalURI comments to be correct and up to date
Attached patch patchSplinter Review
Attachment #8681897 - Flags: review?(amarchesini)
Comment on attachment 8681897 [details] [diff] [review]
patch

Review of attachment 8681897 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/base/nsIDocument.h
@@ +254,5 @@
>     * HTML5.  As such, it may change over the lifetime of the document, for
> +   * instance as a result of the user navigating to a fragment identifier on
> +   * the page, or as a result to a call to pushState() or replaceState().
> +   *
> +   * https://html.spec.whatwg.org/multipage/dom.html#the-document%27s-address

Please use https://html.spec.whatwg.org/multipage/#foo, without the bar.html; that's a more stable URL.
Attachment #8681897 - Flags: review?(amarchesini) → review+
https://hg.mozilla.org/mozilla-central/rev/78cbe4c1c2a1
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: