Bug 1220610 - Fix the nsIDocument::GetDocumentURI and nsIDocument::GetOriginalURI comments to be correct and up to date. r=baku